--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "esnext",
 		"useDefineForClassFields": true,
 		"module": "esnext",
-		"moduleResolution": "Node16",
+		"moduleResolution": "Node",
 		"resolveJsonModule": true,
 		"baseUrl": ".",
 		"allowJs": true,
@@ -14,4 +14,3 @@
 	"include": ["interface/**/*.d.ts", "interface/**/*.ts", "interface/**/*.js", "interface/**/*.svelte", "interface/vite.config.js", "interface/svelte.config.js"],
 	"exclude": ["dist", "interface/svelte.config.js", "interface/vite.config.js"]
 }
-
