--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier-plugin-tailwindcss": "^0.1.11",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
+    "svelte-navigator": "^3.1.6",
     "svelte-preprocess": "^4.9.8",
     "tailwindcss": "^3.1.4",
     "typescript": "^4.5.4",
