--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
-  "name": "authme-v4",
-  "private": true,
-  "version": "4.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite interface",
-    "build": "vite build interface",
-    "preview": "vite preview interface",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tsconfig/svelte": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0-1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-svelte": "^2.1.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.0",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-navigator": "^3.1.6",
-    "svelte-preprocess": "^4.9.8",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9"
-  },
-  "dependencies": {
-    "@rgossiaux/svelte-headlessui": "^1.0.2",
-    "@rgossiaux/svelte-heroicons": "^0.1.2"
-  }
+	"name": "authme-v4",
+	"version": "4.0.0",
+	"description": "Simple cross-platform two-factor (2FA) authenticator app for desktop.",
+	"author": "Levminer",
+	"license": "GPL-3.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "parcel ./interface/index.html --port 3000",
+		"build": "parcel build ./interface/index.html"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.2",
+		"@typescript-eslint/eslint-plugin": "^5.30.5",
+		"@typescript-eslint/parser": "^5.30.5",
+		"autoprefixer": "^10.4.7",
+		"buffer": "^6.0.3",
+		"eslint": "^8.19.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard": "^17.0.0-1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-svelte": "^2.1.0",
+		"os-browserify": "^0.3.0",
+		"parcel": "^2.6.2",
+		"parcel-transformer-svelte3-plus": "^0.2.8",
+		"postcss": "^8.4.14",
+		"prettier": "^2.7.0",
+		"prettier-plugin-tailwindcss": "^0.1.11",
+		"process": "^0.11.10",
+		"svelte-preprocess": "^4.10.7",
+		"svelte-routing": "^1.6.0",
+		"tailwindcss": "^3.1.5",
+		"typescript": "^4.7.4",
+		"util": "^0.12.4"
+	},
+	"dependencies": {
+		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"protocol-buffers": "^5.0.0",
+		"svelte": "^3.49.0"
+	}
 }
