--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.2",
+		"@types/node": "^18.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.30.5",
 		"@typescript-eslint/parser": "^5.30.5",
 		"autoprefixer": "^10.4.7",
@@ -37,6 +38,7 @@
 	},
 	"dependencies": {
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"otpauth": "^8.0.1",
 		"protocol-buffers": "^5.0.0",
 		"svelte": "^3.49.0"
 	}
