--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@typescript-eslint/parser": "^5.30.5",
 		"autoprefixer": "^10.4.7",
 		"buffer": "^6.0.3",
+		"crypto-browserify": "^3.12.0",
 		"eslint": "^8.19.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-svelte": "^2.1.0",
+		"events": "^3.3.0",
 		"os-browserify": "^0.3.0",
 		"parcel": "^2.6.2",
 		"parcel-transformer-svelte3-plus": "^0.2.8",
@@ -30,9 +32,10 @@
 		"prettier": "^2.7.0",
 		"prettier-plugin-tailwindcss": "^0.1.11",
 		"process": "^0.11.10",
+		"stream-browserify": "^3.0.0",
 		"svelte-preprocess": "^4.10.7",
-		"svelte-routing": "^1.6.0",
 		"tailwindcss": "^3.1.5",
+		"tinro": "^0.6.12",
 		"typescript": "^4.7.4",
 		"util": "^0.12.4"
 	},
