Import from images

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"otpauth": "^8.0.1",
 		"protocol-buffers": "^5.0.0",
+		"qrcode-decoder": "^0.2.2",
 		"svelte": "^3.49.0"
 	}
 }
