--- a/package.json
+++ b/package.json
@@ -15,19 +15,17 @@
 		"@tailwindcss/forms": "^0.5.2",
 		"@tauri-apps/api": "^1.0.2",
 		"@tauri-apps/cli": "^1.0.4",
-		"@types/node": "^18.0.3",
-		"@typescript-eslint/eslint-plugin": "^5.30.5",
-		"@typescript-eslint/parser": "^5.30.5",
+		"@types/node": "^18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
 		"buffer": "^6.0.3",
-		"crypto-browserify": "^3.12.0",
-		"eslint": "^8.19.0",
+		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-svelte": "^2.1.0",
-		"events": "^3.3.0",
 		"os-browserify": "^0.3.0",
 		"parcel": "^2.6.2",
 		"parcel-transformer-svelte3-plus": "^0.2.8",
@@ -35,19 +33,19 @@
 		"prettier": "^2.7.0",
 		"prettier-plugin-tailwindcss": "^0.1.11",
 		"process": "^0.11.10",
-		"stream-browserify": "^3.0.0",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.5",
+		"tailwindcss": "^3.1.6",
 		"tinro": "^0.6.12",
 		"typescript": "^4.7.4",
 		"util": "^0.12.4"
 	},
 	"dependencies": {
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"easy-web-crypto": "^1.2.10",
 		"otpauth": "^8.0.1",
 		"protocol-buffers": "^5.0.0",
 		"qrcode-decoder": "^0.2.2",
-		"scrypt-js": "^3.0.1",
-		"svelte": "^3.49.0"
+		"svelte": "^3.49.0",
+		"ua-parser-js": "^1.0.2"
 	}
 }
