--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,8 +17,12 @@ tauri-build = { version = "1.0.3", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.3", features = ["api-all"] }
+tauri = { version = "1.0.3", features = ["api-all", "system-tray"] }
 window-vibrancy = "0.1.3"
+auto-launch = { git = "https://github.com/zzzgydi/auto-launch", branch = "main" }
+sysinfo = "0.20.2"
+argon2 = "0.4"
+rand_core = { version = "0.6", features = ["std"] }
 
 [features]
 # by default Tauri runs in production mode
@@ -27,3 +31,9 @@ default = [ "custom-protocol" ]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = [ "tauri/custom-protocol" ]
+
+[profile.release]
+panic = "abort" # Strip expensive panic clean-up logic
+codegen-units = 1 # Compile crates one after another so the compiler can optimize better
+lto = true # Enables link to optimizations
+opt-level = "s" # Optimize for binary size
