--- a/.github/workflows/alpha-artifact.yml
+++ b/.github/workflows/alpha-artifact.yml
@@ -30,8 +30,7 @@ jobs:
         if: matrix.NAME == 'linux'
         run: >
           sudo apt-get update
-
-          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator-dev
+          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
       - name: Install app dependencies and build it
         run: npm ci && npm run build:alpha
       - uses: tauri-apps/tauri-action@v0
@@ -40,7 +39,6 @@ jobs:
       - name: Remove useless folders
         run: >
           rm -rf core/target/release/build
-
           rm -rf core/target/release/deps
         shell: bash
       - name: Upload artifacts
