--- a/.github/workflows/alpha-artifact.yml
+++ b/.github/workflows/alpha-artifact.yml
@@ -28,7 +28,7 @@ jobs:
           toolchain: stable
       - name: Install webkit2gtk (ubuntu only)
         if: matrix.NAME == 'linux'
-        run: >
+        run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
       - name: Install app dependencies and build it
@@ -37,7 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Remove useless folders
-        run: >
+        run: |
           rm -rf core/target/release/build
           rm -rf core/target/release/deps
         shell: bash
