--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,8 +19,8 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
 window-vibrancy = "0.1.3"
-auto-launch = { git = "https://github.com/zzzgydi/auto-launch", branch = "main" }
-sysinfo = "0.20.2"
+auto-launch = "0.3.0"
+sysinfo = "0.25.3"
 argon2 = "0.4"
 rand_core = { version = "0.6", features = ["std"] }
 
