--- a/package.json
+++ b/package.json
@@ -7,47 +7,46 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node scripts/build.cjs alpha true && tauri dev",
-		"dev": "parcel ./interface/layout/index.html --port 3000",
-		"build": "node scripts/build.cjs alpha false && tauri build",
-		"build:alpha": "node scripts/build.cjs alpha false && tauri build",
-		"build:bundle": "parcel build ./interface/layout/index.html --no-content-hash --no-source-maps"
+		"start": "node scripts/buildNumber.cjs alpha true && tauri dev",
+		"dev": "node scripts/server.js",
+		"build": "node scripts/buildNumber.cjs alpha false && tauri build",
+		"build:alpha": "node scripts/buildNumber.cjs alpha false && tauri build",
+		"build:bundle": "node scripts/build.js"
 	},
 	"devDependencies": {
+		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+		"@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tauri-apps/api": "^1.0.2",
 		"@tauri-apps/cli": "^1.0.5",
 		"@types/node": "^18.6.4",
 		"@typescript-eslint/eslint-plugin": "^5.32.0",
 		"@typescript-eslint/parser": "^5.32.0",
-		"buffer": "^6.0.3",
+		"esbuild": "^0.15.5",
+		"esbuild-style-plugin": "^1.6.0",
+		"esbuild-svelte": "^0.7.1",
 		"eslint": "^8.21.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-svelte": "^2.4.1",
-		"os-browserify": "^0.3.0",
-		"parcel": "^2.7.0",
-		"parcel-transformer-svelte3-plus": "^0.2.8",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.0",
 		"prettier-plugin-tailwindcss": "^0.1.13",
-		"process": "^0.11.10",
+		"svelte": "^3.49.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.8",
 		"tinro": "^0.6.12",
-		"typescript": "^4.7.4",
-		"util": "^0.12.4"
+		"typescript": "^4.7.4"
 	},
 	"dependencies": {
-		"@rgossiaux/svelte-headlessui": "^1.0.2",
-		"easy-web-crypto": "^1.2.10",
+		"autoprefixer": "^10.4.8",
 		"otpauth": "^8.0.1",
 		"protocol-buffers": "^5.0.0",
 		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4",
-		"svelte": "^3.49.0",
 		"ua-parser-js": "^1.0.2"
 	}
 }
