--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -25,6 +25,7 @@ argon2 = "0.4"
 rand_core = { version = "0.6", features = ["std"] }
 magic-crypt = "3.1.10"
 keyring = "1.2.0"
+once_cell = "1.14.0"
 
 [features]
 # by default Tauri runs in production mode
