--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -26,6 +26,7 @@ rand_core = { version = "0.6", features = ["std"] }
 magic-crypt = "3.1.10"
 keyring = "1.2.0"
 once_cell = "1.14.0"
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/tauri-plugin-single-instance" }
 
 [features]
 # by default Tauri runs in production mode
