--- a/.github/workflows/alpha-artifact.yml
+++ b/.github/workflows/alpha-artifact.yml
@@ -16,6 +16,8 @@ jobs:
           - os: windows-latest
             NAME: windows
     runs-on: ${{ matrix.os}}
+    env:
+      TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
