--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -27,6 +27,7 @@ magic-crypt = "3.1.10"
 keyring = "1.2.0"
 once_cell = "1.14.0"
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/tauri-plugin-single-instance" }
+rand = "0.8.5"
 
 [features]
 # by default Tauri runs in production mode
